// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalWindow /> Should works with mode 1`] = `
<ModalWindow
  accessStatus={
    Array [
      "Открыт",
      "Выполнен",
      "Закрыт",
      "В работе",
    ]
  }
  editableContent=""
  firebase={Object {}}
  keyTask=""
  mode="reg"
  modeControll=""
  modeEditContent={false}
  onCaching={[Function]}
  onCancelEditModeContent={[Function]}
  onEdit={[Function]}
  onRejectEdit={[Function]}
  onUpdate={[Function]}
  onUpdateEditable={[Function]}
  path=""
  primaryKey=""
  routeDataActive={Object {}}
  statusTaskValue="В работе"
  typeRequst=""
>
  <Button
    block={false}
    ghost={false}
    htmlType="button"
    loading={false}
    onClick={[Function]}
    type="primary"
  >
    <Wave>
      <button
        className="ant-btn ant-btn-primary"
        onClick={[Function]}
        type="button"
      >
        <span
          key=".0"
        >
          Регистрация
        </span>
      </button>
    </Wave>
  </Button>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Регистрация"
    transitionName="zoom"
    visible={false}
    width={520}
  >
    <Component
      className="modalWindow"
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <Icon
            className="ant-modal-close-icon"
            type="close"
          />
        </span>
      }
      confirmLoading={false}
      footer={
        <LocaleReceiver
          componentName="Modal"
          defaultLocale={
            Object {
              "cancelText": "Cancel",
              "justOkText": "OK",
              "okText": "OK",
            }
          }
        >
          [Function]
        </LocaleReceiver>
      }
      maskTransitionName="fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      onOk={[Function]}
      prefixCls="ant-modal"
      title="Регистрация"
      transitionName="zoom"
      visible={false}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={false}
      />
    </Component>
  </Modal>
</ModalWindow>
`;

exports[`<ModalWindow /> Should works with mode 2`] = `""`;

exports[`<ModalWindow /> Should works with mode 3`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <Dropdown
      mouseEnterDelay={0.15}
      mouseLeaveDelay={0.1}
      overlay={
        <React.Fragment>
          <Menu>
            <MenuItem>
              <p
                className="jur"
                onClick={[Function]}
              >
                Занести в журнал работы
              </p>
            </MenuItem>
            <MenuItem>
              <p
                className="statusTask"
                onClick={[Function]}
              >
                Сменить статус задачи
              </p>
            </MenuItem>
            <MenuItem>
              <p
                className="statusTask"
                onClick={[Function]}
              >
                Редактировать задачу
              </p>
            </MenuItem>
          </Menu>
        </React.Fragment>
      }
      placement="bottomLeft"
    >
      <p>
        Управление задачей
        <Icon
          type="down"
        />
      </p>
    </Dropdown>
  </div>
  <Modal
    confirmLoading={false}
    maskTransitionName="fade"
    okType="primary"
    transitionName="zoom"
    visible={false}
    width={520}
  />
</Fragment>
`;

exports[`<ModalWindow /> Should works with mode 4`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <Dropdown
      mouseEnterDelay={0.15}
      mouseLeaveDelay={0.1}
      overlay={
        <React.Fragment>
          <Menu>
            <MenuItem>
              <p
                className="jur"
                onClick={[Function]}
              >
                Занести в журнал работы
              </p>
            </MenuItem>
            <MenuItem>
              <p
                className="statusTask"
                onClick={[Function]}
              >
                Сменить статус задачи
              </p>
            </MenuItem>
            <MenuItem>
              <p
                className="statusTask"
                onClick={[Function]}
              >
                Редактировать задачу
              </p>
            </MenuItem>
          </Menu>
        </React.Fragment>
      }
      placement="bottomLeft"
    >
      <p>
        Управление задачей
        <Icon
          type="down"
        />
      </p>
    </Dropdown>
    <p
      className="modeControllEdit"
      onClick={[Function]}
    >
      Сохранить изменения
    </p>
    <p
      className="modeControllEditReject"
      onClick={[Function]}
    >
      Отмена изменений
    </p>
  </div>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Редактирование"
    transitionName="zoom"
    visible={true}
    width={520}
  >
    <Textarea
      className="editContentDescription"
      defaultValue=""
      key="textAreaEdit"
      onChange={[Function]}
      row={10}
      value=""
    />
  </Modal>
</Fragment>
`;

exports[`<ModalWindow /> Should works with mode 5`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <Dropdown
      mouseEnterDelay={0.15}
      mouseLeaveDelay={0.1}
      overlay={
        <React.Fragment>
          <Menu>
            <MenuItem>
              <p
                className="jur"
                onClick={[Function]}
              >
                Занести в журнал работы
              </p>
            </MenuItem>
            <MenuItem>
              <p
                className="statusTask"
                onClick={[Function]}
              >
                Сменить статус задачи
              </p>
            </MenuItem>
            <MenuItem>
              <p
                className="statusTask"
                onClick={[Function]}
              >
                Редактировать задачу
              </p>
            </MenuItem>
          </Menu>
        </React.Fragment>
      }
      placement="bottomLeft"
    >
      <p>
        Управление задачей
        <Icon
          type="down"
        />
      </p>
    </Dropdown>
    <p
      className="modeControllEdit"
      onClick={[Function]}
    >
      Сохранить изменения
    </p>
    <p
      className="modeControllEditReject"
      onClick={[Function]}
    >
      Отмена изменений
    </p>
  </div>
  <Modal
    confirmLoading={false}
    maskTransitionName="fade"
    okType="primary"
    transitionName="zoom"
    visible={false}
    width={520}
  />
</Fragment>
`;

exports[`<ModalWindow /> Should works with mode 6`] = `
<Fragment>
  <div
    className="dropDownWrapper"
  >
    <Dropdown
      mouseEnterDelay={0.15}
      mouseLeaveDelay={0.1}
      overlay={
        <React.Fragment>
          <Menu>
            <MenuItem>
              <p
                className="jur"
                onClick={[Function]}
              >
                Занести в журнал работы
              </p>
            </MenuItem>
            <MenuItem>
              <p
                className="statusTask"
                onClick={[Function]}
              >
                Сменить статус задачи
              </p>
            </MenuItem>
            <MenuItem>
              <p
                className="statusTask"
                onClick={[Function]}
              >
                Редактировать задачу
              </p>
            </MenuItem>
          </Menu>
        </React.Fragment>
      }
      placement="bottomLeft"
    >
      <p>
        Управление задачей
        <Icon
          type="down"
        />
      </p>
    </Dropdown>
  </div>
  <Modal
    className="modalWindow"
    confirmLoading={false}
    maskTransitionName="fade"
    okType="primary"
    onCancel={[Function]}
    onOk={[Function]}
    title="Редактирование"
    transitionName="zoom"
    visible={true}
    width={520}
  >
    <Textarea
      className="editContentDescription"
      defaultValue=""
      key="textAreaEdit"
      onChange={[Function]}
      row={10}
      value=""
    />
  </Modal>
</Fragment>
`;
